<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, Joaquim!"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag.: 1234-5"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"/>

    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="C.C.: 1324567-0"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_disponivel"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/iv_saldo"
                app:layout_constraintStart_toEndOf="@id/iv_saldo"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo"/>

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1.258,33"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="@id/iv_saldo"
                app:layout_constraintTop_toBottomOf="@id/iv_saldo"/>

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_limite"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"/>

            <TextView
                android:id="@+id/tv_valor_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 2.258,33"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                android:layout_marginStart="8dp"/>

            <View
                android:id="@+id/v_linha_saldo_extrato"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"/>

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_extrato"
                android:textColor="@color/redSecundary"
                app:layout_constraintTop_toBottomOf="@id/v_linha_saldo_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/mcv_card_conta"
        app:layout_constraintTop_toBottomOf="@+id/mcv_card_conta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:src="@drawable/ic_credit_card_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_pagar"/>

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferir"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/mcv_pagar"
        app:layout_constraintEnd_toStartOf="@id/mcv_recarga"
        app:layout_constraintTop_toBottomOf="@+id/mcv_card_conta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:src="@drawable/ic_payments_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_transferir"/>

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarga"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/mcv_card_conta"
        app:layout_constraintTop_toBottomOf="@+id/mcv_card_conta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga"
                android:src="@drawable/ic_stay_primary_portrait_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_recarga"/>

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recarga"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    
    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/mcv_transferir"
        app:layout_constraintStart_toStartOf="@id/mcv_pagar"
        app:layout_constraintEnd_toEndOf="@id/mcv_recarga"/>

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_final"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintStart_toStartOf="@id/iv_cartao_final"/>

    <TextView
        android:id="@+id/tv_numero_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3536"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_cartao_final"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final"/>

    <ImageView
        android:id="@+id/iv_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_cartao_final"
        app:layout_constraintEnd_toEndOf="@+id/iv_cartao_final"/>


</androidx.constraintlayout.widget.ConstraintLayout>